// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Sidebar Default 1`] = `
<div>
  <h3>
    Sidebar docked
  </h3>
  <div
    style={
      Object {
        "width": "55px",
      }
    }
  >
    <div
      className="sc-sidebar sc-bdVaJa hkGgth"
    >
      <div
        className="sc-sidebar-item sc-bwzfXH kKSAuu"
        onClick={[Function]}
        title="Dashboard"
      >
        <div
          className="sc-bxivhb eKWSYF"
        >
          <i
            className="fas fa-tachometer-alt"
          />
        </div>
      </div>
      <div
        className="sc-sidebar-item sc-bwzfXH gsZcLL"
        onClick={[Function]}
        title="Servers"
      >
        <div
          className="sc-bxivhb eKWSYF"
        >
          <i
            className="fas fa-server"
          />
        </div>
      </div>
      <div
        className="sc-sidebar-item sc-bwzfXH gsZcLL"
        onClick={[Function]}
        title="Disks"
      >
        <div
          className="sc-bxivhb eKWSYF"
        >
          <i
            className="fas fa-hdd"
          />
        </div>
      </div>
    </div>
  </div>
  <h3>
    Sidebar expanded
  </h3>
  <div
    style={
      Object {
        "width": "150px",
      }
    }
  >
    <div
      className="sc-sidebar sc-bdVaJa jhrVkk"
    >
      <div
        className="sc-sidebar-item sc-bwzfXH kKSAuu"
        onClick={[Function]}
        title="Dashboard"
      >
        <div
          className="sc-bxivhb eKWSYF"
        >
          <i
            className="fas fa-tachometer-alt"
          />
        </div>
        <div
          className="sc-htpNat jyYvCB"
        >
          Dashboard
        </div>
      </div>
      <div
        className="sc-sidebar-item sc-bwzfXH gsZcLL"
        onClick={[Function]}
        title="Servers"
      >
        <div
          className="sc-bxivhb eKWSYF"
        >
          <i
            className="fas fa-server"
          />
        </div>
        <div
          className="sc-htpNat jyYvCB"
        >
          Servers
        </div>
      </div>
      <div
        className="sc-sidebar-item sc-bwzfXH gsZcLL"
        onClick={[Function]}
        title="Disks"
      >
        <div
          className="sc-bxivhb eKWSYF"
        >
          <i
            className="fas fa-hdd"
          />
        </div>
        <div
          className="sc-htpNat jyYvCB"
        >
          Disks
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar ThemeProvider 1`] = `
<div>
  <div>
    <h3>
      Sidebar docked
    </h3>
    <div
      style={
        Object {
          "width": "55px",
        }
      }
    >
      <div
        className="sc-sidebar sc-bdVaJa gdDOIH"
      >
        <div
          className="sc-sidebar-item sc-bwzfXH bwPYzU"
          onClick={[Function]}
          title="Dashboard"
        >
          <div
            className="sc-bxivhb eKWSYF"
          >
            <i
              className="fas fa-tachometer-alt"
            />
          </div>
        </div>
        <div
          className="sc-sidebar-item sc-bwzfXH dPoJKd"
          onClick={[Function]}
          title="Servers"
        >
          <div
            className="sc-bxivhb eKWSYF"
          >
            <i
              className="fas fa-server"
            />
          </div>
        </div>
        <div
          className="sc-sidebar-item sc-bwzfXH dPoJKd"
          onClick={[Function]}
          title="Disks"
        >
          <div
            className="sc-bxivhb eKWSYF"
          >
            <i
              className="fas fa-hdd"
            />
          </div>
        </div>
      </div>
    </div>
    <h3>
      Sidebar expanded
    </h3>
    <div
      style={
        Object {
          "width": "150px",
        }
      }
    >
      <div
        className="sc-sidebar sc-bdVaJa goSOwH"
      >
        <div
          className="sc-sidebar-item sc-bwzfXH bwPYzU"
          onClick={[Function]}
          title="Dashboard"
        >
          <div
            className="sc-bxivhb eKWSYF"
          >
            <i
              className="fas fa-tachometer-alt"
            />
          </div>
          <div
            className="sc-htpNat jyYvCB"
          >
            Dashboard
          </div>
        </div>
        <div
          className="sc-sidebar-item sc-bwzfXH dPoJKd"
          onClick={[Function]}
          title="Servers"
        >
          <div
            className="sc-bxivhb eKWSYF"
          >
            <i
              className="fas fa-server"
            />
          </div>
          <div
            className="sc-htpNat jyYvCB"
          >
            Servers
          </div>
        </div>
        <div
          className="sc-sidebar-item sc-bwzfXH dPoJKd"
          onClick={[Function]}
          title="Disks"
        >
          <div
            className="sc-bxivhb eKWSYF"
          >
            <i
              className="fas fa-hdd"
            />
          </div>
          <div
            className="sc-htpNat jyYvCB"
          >
            Disks
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
